# Generated by Django 5.2.9 on 2025-12-08 15:58

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('syllabi', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='AiCheckResult',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('model_name', models.CharField(max_length=255)),
                ('summary', models.TextField()),
                ('raw_result', models.JSONField()),
                ('syllabus', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='ai_checks', to='syllabi.syllabus')),
            ],
        ),
    ]
