# Generated by Django 5.2.9 on 2025-12-08 15:30

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Course',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('code', models.CharField(max_length=50)),
                ('title_ru', models.CharField(blank=True, max_length=255)),
                ('title_kz', models.CharField(blank=True, max_length=255)),
                ('title_en', models.CharField(blank=True, max_length=255)),
                ('description_ru', models.TextField(blank=True)),
                ('description_kz', models.TextField(blank=True)),
                ('description_en', models.TextField(blank=True)),
                ('available_languages', models.CharField(help_text='Коды языков через запятую, например ru,kz,en', max_length=50)),
                ('is_shared', models.BooleanField(default=False)),
                ('owner', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='courses', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='Topic',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('order_index', models.PositiveIntegerField(default=1)),
                ('title_ru', models.CharField(blank=True, max_length=255)),
                ('title_kz', models.CharField(blank=True, max_length=255)),
                ('title_en', models.CharField(blank=True, max_length=255)),
                ('description_ru', models.TextField(blank=True)),
                ('description_kz', models.TextField(blank=True)),
                ('description_en', models.TextField(blank=True)),
                ('default_hours', models.PositiveIntegerField(default=2)),
                ('week_type', models.CharField(choices=[('lecture', 'Лекция'), ('practice', 'Практика'), ('lab', 'Лабораторная')], default='lecture', max_length=32)),
                ('is_active', models.BooleanField(default=True)),
                ('course', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='topics', to='catalog.course')),
            ],
        ),
        migrations.CreateModel(
            name='TopicLiterature',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(max_length=255)),
                ('author', models.CharField(blank=True, max_length=255)),
                ('year', models.CharField(blank=True, max_length=10)),
                ('lit_type', models.CharField(choices=[('main', 'Основная'), ('additional', 'Дополнительная')], default='main', max_length=32)),
                ('topic', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='literature', to='catalog.topic')),
            ],
        ),
        migrations.CreateModel(
            name='TopicQuestion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('question_ru', models.TextField(blank=True)),
                ('question_kz', models.TextField(blank=True)),
                ('question_en', models.TextField(blank=True)),
                ('topic', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='questions', to='catalog.topic')),
            ],
        ),
    ]
